Make the lists returned by JiraCheckLoop#checkIssues() mutable